# clean-architecture

./: .gitignore  clean-architecture.md  pyproject.toml
serivces/booking/application/booking/: booking.py  manager.py
serivces/booking/domain/booking/: entities.py  enums.py  exceptions.py
serivces/booking/domain/customers/: entities.py
serivces/booking/domain/rooms/: entities.py
